--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <h1><a href="./public/birthday-invite.html">Birthday Invite Project</a></h1>
     <img src="./assets/images/birthday-invite.png" height="600" alt="Preview of Birthday Invitation Website"/>
     <hr/>
-    <a href="./public/about.html">About me</a> 
-    <a href="./public/contact.html">Contact Me</a>
+    <h1><a href="./public/Resume.html">Resume</a></h1>
+    <img src="./assets/images/Resume.PNG" alt="Resume Image">
+    <footer><a href="./public/about.html">About me</a> 
+            <a href="./public/contact.html">Contact Me</a>
+    </footer>
+    
 
 </body>
 </html>
